Fix GH Pages deploy: single next config + run in site/

--- a/site/package.json
+++ b/site/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next build"
+  },
+  "dependencies": {
+    "next": "...",
+    "react": "...",
+    "react-dom": "..."
   }
 }
