--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy Next.js to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
   workflow_dispatch:
 
 permissions:
@@ -13,6 +13,11 @@ permissions:
 concurrency:
   group: "pages"
   cancel-in-progress: false
+
+# Run all shell steps inside the site/ folder
+defaults:
+  run:
+    working-directory: site
 
 jobs:
   build:
@@ -25,16 +30,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: npm
           cache-dependency-path: site/package-lock.json
 
       - name: Install
         run: npm ci
-        working-directory: site
 
       - name: Build (static export to /out)
         run: npm run build
-        working-directory: site
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
